# multimon_android

./: README.md  pubspec.yaml
.github/workflows/: android.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  CMakeLists_tcp.txt  jni_bridge.c  tcp_multimon_bridge.c
android/app/src/main/cpp/audio_pipe/: audio_pipe.c  audio_pipe.h
android/app/src/main/cpp/multimon/: multimon_lib.c  multimon_lib.h
android/app/src/main/cpp/rtl_fm/: fm_demod.c  fm_demod.h  rtl_fm_core.h  rtl_fm_lib.h
android/app/src/main/cpp_backup_old/: CMakeLists.txt  jni_wrapper.c
android/app/src/main/cpp_backup_old/multimon/: demod_afsk12.c  hdlc.c  rtl_input.c  rtl_input.h  unixinput.c
android/app/src/main/kotlin/com/multimon/multimon_android/: MainActivity.kt  MainActivityTcp.kt  RtlSdrService.kt  TcpMultimonService.kt
android/app/src/main/res/xml/: device_filter.xml
lib/: main.dart  main_old.dart  rtlsdr_plugin.dart
test/: widget_test.dart
